--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LeapYear</title>
 </head>
-<body>
+<body style="background:#fbe5e8;">
   <form action="#" id="form">
     <input type="text" id="year" name="year">
     <input type="submit" value="判定" id="button">
